<resources>
    <string name="app_name">Vote Easy</string>
    <string name="advertisement">Advertisement</string>
    <string name="track_application">Track Application</string>
    <string name="vote">Vote</string>
    <string name="modify_voter_id">Modify Voter ID</string>
    <string name="new_application">New Application</string>
    <string name="user_profile" />
    <string name="this_is_the_track_application_page">This is the Track Application page</string>
    <string name="this_is_new_application_page">This is new application page</string>
    <string name="this_is_the_voting_page" />
    <string name="this_is_the_modification_page" />
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="button1">Button</string>
    <string name="submit">Submit</string>
    <string name="voter_id_application">Voter ID Application</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (DD/MM/YYYY)</string>
    <string name="application_form">Application Form</string>
    <string name="enter_name">Enter Name:</string>
    <string name="Enter_Name">Name</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="address">address</string>
    <string name="enter_Age">Enter Age</string>
    <string name="i_am_agree_to_your_terms_amp_policy"><![CDATA[I am agree to your terms & policy]]></string>
    <string name="submit_button">Button</string>
    <string name="enter_address">Enter address</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>

    <!-- Nationality Options with 'Select any one' prompt -->
    <string-array name="nationality_array">
        <item>Select any one</item>
        <item>Indian</item>
        <item>American</item>
        <item>British</item>
        <item>Canadian</item>
        <!-- Add more nationality options as needed -->
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_icon" />
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open" />
    <string name="close" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userprofile">User Profile</string>
    <string name="logout">Logout</string>
    <string name="enrollment_center">enrollment center</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="developed_by_sundhar_sai_logu">Developed by (sundhar,sai,logu)</string>
    <string name="vote_easy">VOTE EASY</string>
</resources>
