<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/curved_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#2196F3"
        app:title="VOTE EASY"
        app:subtitle="One National One Vote"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/voteridbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="Register Voter ID"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <androidx.cardview.widget.CardView
        android:id="@+id/track_application_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="120dp"
        app:layout_constraintTop_toBottomOf="@id/voteridbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vote_card"
        app:layout_constraintDimensionRatio="1:1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/track_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/trackicon" />
            <TextView
                android:id="@+id/track_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/track_application"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/vote_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="120dp"
        app:layout_constraintTop_toBottomOf="@id/voteridbtn"
        app:layout_constraintStart_toEndOf="@id/track_application_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/vote_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/voteicon" />
            <TextView
                android:id="@+id/vote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vote"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/modify_voter_id_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="120dp"
        app:layout_constraintTop_toBottomOf="@id/track_application_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_application_card"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintDimensionRatio="1:1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/modify_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/modifyicon" />
            <TextView
                android:id="@+id/modify_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Modify Voter ID"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/new_application_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="120dp"
        app:layout_constraintTop_toBottomOf="@id/vote_card"
        app:layout_constraintStart_toEndOf="@id/modify_voter_id_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintDimensionRatio="1:1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/new_application_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/applyicon" />
            <TextView
                android:id="@+id/new_application_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_application"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
